# CitrID

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.windows  README.md  main.cpp  main_19.04.2026_15h00.cpp  main_a_verificar.cpp  main_comandos.cpp  main_old.cpp  main_v2.cpp  segmentacao.cpp  segmentacao.h
Docs/: Comandos.html  Diagrama.html  Guia do Projeto.html  Manual_Configuracao_Final_VCTP.html  compilar.md  documentacao_projeto.md  estrutura_do_projeto.txt  pipeline.html
Docs/VCTP_V1/: min.cpp
Docs/VCTP_V2/: main.cpp
Docs/VCTP_V3/: main.cpp
Docs/VCTP_V4/: main.cpp
Docs/VCTP_V5/: main.cpp
Docs/VCTP_V6/: main.cpp
Docs/VCTP_V7/: main.cpp
lib/: tracking.cpp  tracking.hpp  utils.cpp  utils.hpp  vc.c  vc.h
